@@ -2,6 +2,8 @@
 
 	* core.lisp (set-font): open the font for each screen
 	(add-group): put the new group at the end of the group list
+	(remove-window): update the mode line
+	(process-mapped-window): likewise
 
 	* mode-line.lisp (mode-line-format-elt): use the symbol as a string if it's unbound. ignore T and NIL
 	(screen-mode-line-mode): check the arg types
